--- a/ios-moe/build.gradle
+++ b/ios-moe/build.gradle
@@ -3,7 +3,7 @@ test { exclude '**' }
 
 task copyNatives {
     doLast {
-        file("xcode/native/ios/").mkdirs();
+        file("xcode/native/ios/").mkdirs()
         def LD_FLAGS = "LIBGDX_NATIVES = "
         configurations.natives.files.each { jar ->
             def outputDir = null
@@ -21,7 +21,7 @@ task copyNatives {
                 }
             }
         }
-        def outFlags = file("xcode/ios-moe/custom.xcconfig");
+        def outFlags = file("xcode/ios-moe/custom.xcconfig")
         outFlags.write LD_FLAGS
 
         def proguard = file("proguard.append.cfg")
