--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,8 @@ project(":core") {
         compile "org.projectlombok:lombok:1.18.2"
 
         testCompile "junit:junit:4.12"
-        testCompile "org.assertj:assertj-core:3.9.1"
+        testCompile "org.assertj:assertj-core:3.11.1"
+        testCompile "org.mockito:mockito-core:2.23.0"
     }
 }
 
