--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 buildscript {
-
     repositories {
         mavenLocal()
         mavenCentral()
@@ -13,7 +12,6 @@ buildscript {
 }
 
 allprojects {
-    apply plugin: "eclipse"
     apply plugin: "idea"
 
     version = '1.0'
@@ -35,53 +33,68 @@ allprojects {
     }
 }
 
+dependencies {
+
+}
+
 project(":desktop") {
     apply plugin: "java"
 
     dependencies {
-        compile project(":core")
-        compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-        compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
-        compile "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"
-        compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
-        compile "de.tomgrill.gdxdialogs:gdx-dialogs-desktop:1.2.5"
+        implementation project(":core")
+        implementation "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+        implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        implementation "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
+        implementation "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
+        implementation "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"
+        implementation "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+        implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
+        implementation "de.tomgrill.gdxdialogs:gdx-dialogs-desktop:1.3.0"
 
+        implementation "org.projectlombok:lombok:1.18.2"
+
+        testImplementation "org.assertj:assertj-core:3.11.1"
+        testImplementation "org.mockito:mockito-core:2.23.0"
+        testImplementation "org.junit.jupiter:junit-jupiter-api:5.1.1"
+
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.1.1"
+    }
+
+    test {
+        useJUnitPlatform()
     }
 }
 
 project(":core") {
     apply plugin: "java"
 
-    sourceSets.test.java.srcDirs = ["/test"]
-
     dependencies {
-        compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-ai:1.8.1"
-        compile "com.badlogicgames.ashley:ashley:1.7.3"
-        compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-        compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
-        compile "com.underwaterapps.overlap2druntime:overlap2d-runtime-libgdx:0.1.1"
-        compile "com.kotcrab.vis:vis-ui:1.4.1"
-        compile "net.dermetfan.libgdx-utils:libgdx-utils:0.13.4"
-        compile "net.dermetfan.libgdx-utils:libgdx-utils-box2d:0.13.4"
-        compile "de.tomgrill.gdxdialogs:gdx-dialogs-core:1.3.0"
-        compile "com.github.czyzby:gdx-kiwi:1.9.1.9.6"
-        compile "com.github.czyzby:gdx-lml:1.9.1.9.6"
-        compile "com.github.czyzby:gdx-lml-vis:1.9.1.9.6"
+        implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
+        implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+        implementation "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
+        implementation "com.badlogicgames.gdx:gdx-ai:1.8.1"
+        implementation "com.badlogicgames.ashley:ashley:1.7.3"
+        implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
+        implementation "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
+        implementation "com.underwaterapps.overlap2druntime:overlap2d-runtime-libgdx:0.1.1"
+        implementation "com.kotcrab.vis:vis-ui:1.4.1"
+        implementation "net.dermetfan.libgdx-utils:libgdx-utils:0.13.4"
+        implementation "net.dermetfan.libgdx-utils:libgdx-utils-box2d:0.13.4"
+        implementation "de.tomgrill.gdxdialogs:gdx-dialogs-core:1.3.0"
+        implementation "com.github.czyzby:gdx-kiwi:1.9.1.9.6"
+        implementation "com.github.czyzby:gdx-lml:1.9.1.9.6"
+        implementation "com.github.czyzby:gdx-lml-vis:1.9.1.9.6"
 
-        compile "org.projectlombok:lombok:1.18.2"
+        implementation "org.projectlombok:lombok:1.18.2"
 
-        testCompile "junit:junit:4.12"
-        testCompile "org.assertj:assertj-core:3.11.1"
-        testCompile "org.mockito:mockito-core:2.23.0"
+        testImplementation "org.assertj:assertj-core:3.11.1"
+        testImplementation "org.mockito:mockito-core:2.23.0"
+        testImplementation "org.junit.jupiter:junit-jupiter-api:5.1.1"
+
+        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.1.1"
     }
-}
 
-tasks.eclipse.doLast {
-    delete ".project"
+    test {
+        useJUnitPlatform()
+    }
 }
