--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -1,10 +1,9 @@
 apply plugin: "java"
 
-sourceCompatibility = 1.8
-sourceSets.main.java.srcDirs = ["src/"]
+sourceCompatibility = 1.11
 
-project.ext.mainClassName = "nl.t64.game.rpg.desktop.DesktopLauncher"
-project.ext.assetsDir = new File("../core/assets")
+project.ext.mainClassName = "nl.t64.game.rpg.DesktopLauncher"
+project.ext.assetsDir = new File("../core/src/main/resources")
 
 task run(dependsOn: classes, type: JavaExec) {
     main = project.mainClassName
@@ -35,21 +34,3 @@ task dist(type: Jar) {
 }
 
 dist.dependsOn classes
-
-eclipse {
-    project {
-        name = appName + "-desktop"
-        linkedResource name: 'assets', type: '2', location: 'PARENT-1-PROJECT_LOC/core/assets'
-    }
-}
-
-task afterEclipseImport(description: "Post processing after project generation", group: "IDE") {
-    doLast {
-        def classpath = new XmlParser().parse(file(".classpath"))
-        new Node(classpath, "classpathentry", [kind: 'src', path: 'assets'])
-        def writer = new FileWriter(file(".classpath"))
-        def printer = new XmlNodePrinter(new PrintWriter(writer))
-        printer.setPreserveWhitespace(true)
-        printer.print(classpath)
-    }
-}
