--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ allprojects {
     version = '1.0'
     ext {
         appName = "gdx-rpg2"
-        gdxVersion = '1.9.9'
+        gdxVersion = '1.9.8'
         roboVMVersion = '2.3.5'
         box2DLightsVersion = '1.4'
         ashleyVersion = '1.7.3'
@@ -30,6 +30,7 @@ allprojects {
     repositories {
         mavenLocal()
         mavenCentral()
+        jcenter()
         google()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
@@ -42,12 +43,7 @@ project(":desktop") {
         implementation project(":core")
         implementation "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-        implementation "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
-        implementation "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
-        implementation "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"
-        implementation "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
-        implementation "de.tomgrill.gdxdialogs:gdx-dialogs-desktop:1.3.0"
     }
 }
 
@@ -57,27 +53,12 @@ project(":core") {
         annotationProcessor "org.projectlombok:lombok:1.18.6"
 
         implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
-        implementation "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-        implementation "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
-        implementation "com.badlogicgames.gdx:gdx-ai:$aiVersion"
-        implementation "com.badlogicgames.ashley:ashley:$ashleyVersion"
         implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-        implementation "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
-        implementation "com.underwaterapps.overlap2druntime:overlap2d-runtime-libgdx:0.1.1"
-        implementation "com.kotcrab.vis:vis-ui:1.4.2"
-        implementation "net.dermetfan.libgdx-utils:libgdx-utils:0.13.4"
-        implementation "net.dermetfan.libgdx-utils:libgdx-utils-box2d:0.13.4"
-        implementation "de.tomgrill.gdxdialogs:gdx-dialogs-core:1.3.0"
-        implementation "com.github.czyzby:gdx-kiwi:1.9.1.9.6"
-        implementation "com.github.czyzby:gdx-lml:1.9.1.9.6"
-        implementation "com.github.czyzby:gdx-lml-vis:1.9.1.9.6"
-
         implementation "com.fasterxml.jackson.core:jackson-databind:2.9.8"
 
-        testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
         testImplementation "com.badlogicgames.gdx:gdx:$gdxVersion"
         testImplementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
-
+        testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
         testImplementation "org.assertj:assertj-core:3.11.1"
         testImplementation "org.mockito:mockito-core:2.23.0"
         testImplementation "org.junit.jupiter:junit-jupiter-api:5.1.1"
