--- a/.gitignore
+++ b/.gitignore
@@ -104,10 +104,15 @@ gradle-app.setting
 /build/
 /android/build/
 /core/build/
+/core/out/
 /desktop/build/
+/desktop/out/
 /html/build/
 /ios/build/
 /ios-moe/build/
+
+/core/src/main/resources/savegame/
+/core/src/main/resources/settings/
 
 ## OS Specific
 .DS_Store
