--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ allprojects {
         appName = "gdx-rpg2"
         gdxVersion = "1.9.11"
         aiVersion = "1.8.2"
+        lombokVersion = "1.18.12"
+        jacksonVersion = "2.11.2"
+        assertjVersion = "3.17.2"
+        mockitoVersion = "3.5.11"
+        junitVersion = "5.7.0"
     }
 
     repositories {
@@ -55,13 +60,13 @@ project(":desktop") {
 
 project(":core") {
     dependencies {
-        compileOnly "org.projectlombok:lombok:1.18.12"
-        annotationProcessor "org.projectlombok:lombok:1.18.12"
+        compileOnly "org.projectlombok:lombok:$lombokVersion"
+        annotationProcessor "org.projectlombok:lombok:$lombokVersion"
 
         implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         implementation "com.badlogicgames.gdx:gdx-ai:$aiVersion"
-        implementation "com.fasterxml.jackson.core:jackson-databind:2.11.2"
+        implementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
     }
 }
 
@@ -71,8 +76,8 @@ project(":tests") {
         testImplementation "com.badlogicgames.gdx:gdx:$gdxVersion"
         testImplementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
-        testImplementation "org.assertj:assertj-core:3.16.1"
-        testImplementation "org.mockito:mockito-core:3.5.6"
-        testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
+        testImplementation "org.assertj:assertj-core:$assertjVersion"
+        testImplementation "org.mockito:mockito-core:$mockitoVersion"
+        testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     }
 }
