--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,7 @@ allprojects {
     ext {
         appName = "gdx-rpg2"
         gdxVersion = "1.9.13"
-        controllerVersion = "2.1.0"
+        controllerVersion = "2.2.0-SNAPSHOT"
         mappingVersion = "2.3.0"
         aiVersion = "1.8.2"
         lombokVersion = "1.18.16"
