--- a/build.gradle
+++ b/build.gradle
@@ -30,15 +30,15 @@ allprojects {
     version = "1.0"
     ext {
         appName = "gdx-rpg2"
-        gdxVersion = "1.9.13"
-        controllerVersion = "2.2.0-SNAPSHOT"
+        gdxVersion = "1.9.15-SNAPSHOT"
+        controllerVersion = "2.2.0"
         mappingVersion = "2.3.0"
         aiVersion = "1.8.2"
-        lombokVersion = "1.18.16"
-        jacksonVersion = "2.11.3"
-        assertjVersion = "3.18.0"
-        mockitoVersion = "3.6.0"
-        junitVersion = "5.7.0"
+        lombokVersion = "1.18.18"
+        jacksonVersion = "2.12.2"
+        assertjVersion = "3.19.0"
+        mockitoVersion = "3.8.0"
+        junitVersion = "5.7.1"
     }
 
     repositories {
