libgdx upgrade to 1.10.0.

--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,8 @@ buildscript {
     repositories {
         mavenLocal()
         mavenCentral()
-        maven { url "https://plugins.gradle.org/m2/" }
+        gradlePluginPortal()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        jcenter()
         google()
     }
     dependencies {
@@ -12,7 +11,7 @@ buildscript {
 }
 
 allprojects {
-    apply plugin: "java"
+    apply plugin: "java-library"
     apply plugin: "idea"
 
     sourceCompatibility = 16
@@ -30,7 +29,7 @@ allprojects {
     version = "1.0"
     ext {
         appName = "gdx-rpg2"
-        gdxVersion = "1.9.15-SNAPSHOT"
+        gdxVersion = "1.10.0"
         controllerVersion = "2.2.0"
         mappingVersion = "2.3.0"
         aiVersion = "1.8.2"
@@ -44,7 +43,7 @@ allprojects {
     repositories {
         mavenLocal()
         mavenCentral()
-        jcenter()
+        gradlePluginPortal()
         google()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
