--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ allprojects {
         controllerVersion = "2.2.1"
         mappingVersion = "2.3.0"
         aiVersion = "1.8.2"
-        ktxVersion = "1.10.0-b1"
+        ktxVersion = "1.10.0-SNAPSHOT"
         lombokVersion = "1.18.20"
         jacksonVersion = "2.12.4"
         assertjVersion = "3.20.2"
@@ -104,6 +104,8 @@ project(":core") {
         api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$controllerVersion"
         api "de.golfgl.gdxcontrollerutils:gdx-controllerutils-mapping:$mappingVersion"
         api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
+        api "io.github.libktx:ktx-assets:$ktxVersion"
+        api "io.github.libktx:ktx-freetype:$ktxVersion"
         api "io.github.libktx:ktx-collections:$ktxVersion"
         api "io.github.libktx:ktx-json:$ktxVersion"
         api "io.github.libktx:ktx-preferences:$ktxVersion"
