--- a/build.gradle
+++ b/build.gradle
@@ -69,7 +69,7 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86_64"
-//        api "com.badlogicgames.gdx-controllers:gdx-controllers-android:$controllerVersion"
+        api "com.badlogicgames.gdx-controllers:gdx-controllers-android:$controllerVersion"
 //        api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
         api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi-v7a"
